edit link js, edit link css, edit img

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="max-h-50 max-w-50 inline-block mr-16">
-                <img src="././build/img/logo.png" alt="" class="rounded-full">
+                <img src="./build/img/logo.png" alt="" class="rounded-full">
             </div>
 
             <h2 class="font-black text-lg font-Montserrat uppercase inline-block">Mugi Dou</h2>
