make hover menu desktop of section Works

--- a/index.html
+++ b/index.html
@@ -265,12 +265,12 @@
             <div class="nda-container">
                 <div class="max-w-1080 mx-auto">
                     <h2 class="text-3xl font-black m-0 font-Montserrat uppercase mb-100">Works</h2>
-                    <ul class="mb-49 pl-0 list-none">
-                        <li class="inline-block text-regal-grey-0 cursor-pointer font-Montserrat text-13 font-bold uppercase relative [&:not(:last-child)]:mr-28.8" data-filter="*">Everything</li>
-                        <li class="inline-block text-regal-grey-0 cursor-pointer font-Montserrat text-13 font-bold uppercase relative [&:not(:last-child)]:mr-28.8" data-filter=".creative">Art</li>
-                        <li class="inline-block text-regal-grey-0 cursor-pointer font-Montserrat text-13 font-bold uppercase relative [&:not(:last-child)]:mr-28.8" data-filter=".art">Branding</li>
-                        <li class="inline-block text-regal-grey-0 cursor-pointer font-Montserrat text-13 font-bold uppercase relative [&:not(:last-child)]:mr-28.8" data-filter=".design">Creative</li>
-                        <li class="inline-block text-regal-grey-0 cursor-pointer font-Montserrat text-13 font-bold uppercase relative [&:not(:last-child)]:mr-28.8" data-filter=".branding">Design</li>
+                    <ul class="portfolio-filter list-inline mb-49 pl-0 list-none">
+                        <li class="current list-inline-item inline-block text-regal-grey-0 cursor-pointer font-Montserrat text-13 font-bold uppercase relative hover:text-regal-black hover:after:h-7 [&:not(:last-child)]:mr-28.8" data-filter="*">Everything</li>
+                        <li class="list-inline-item inline-block text-regal-grey-0 cursor-pointer font-Montserrat text-13 font-bold uppercase relative hover:text-regal-black hover:after:h-7 [&:not(:last-child)]:mr-28.8" data-filter=".creative">Art</li>
+                        <li class="list-inline-item inline-block text-regal-grey-0 cursor-pointer font-Montserrat text-13 font-bold uppercase relative hover:text-regal-black hover:after:h-7 [&:not(:last-child)]:mr-28.8" data-filter=".art">Branding</li>
+                        <li class="list-inline-item inline-block text-regal-grey-0 cursor-pointer font-Montserrat text-13 font-bold uppercase relative hover:text-regal-black hover:after:h-7 [&:not(:last-child)]:mr-28.8" data-filter=".design">Creative</li>
+                        <li class="list-inline-item inline-block text-regal-grey-0 cursor-pointer font-Montserrat text-13 font-bold uppercase relative hover:text-regal-black hover:after:h-7 [&:not(:last-child)]:mr-28.8" data-filter=".branding">Design</li>
                     </ul>
                     <div>
                         <div class="grid grid-cols-3 gap-30">
