more updates menu of section work

--- a/index.html
+++ b/index.html
@@ -272,6 +272,18 @@
                         <li class="list-inline-item inline-block text-regal-grey-0 cursor-pointer font-Montserrat text-13 font-bold uppercase relative after:content-[''] after:bg-regal-purple after:w-full after:h-0 after:left-0 after:opacity-50 after:bottom-px after:absolute after:-z-1 hover:text-regal-black hover:after:h-7 [&:not(:last-child)]:mr-28.8" data-filter=".design">Creative</li>
                         <li class="list-inline-item inline-block text-regal-grey-0 cursor-pointer font-Montserrat text-13 font-bold uppercase relative after:content-[''] after:bg-regal-purple after:w-full after:h-0 after:left-0 after:opacity-50 after:bottom-px after:absolute after:-z-1 hover:text-regal-black hover:after:h-7 [&:not(:last-child)]:mr-28.8" data-filter=".branding">Design</li>
                     </ul>
+
+                    <div class="pf-filter-wrapper relative hidden">
+                        
+                        <select class="portfolio-filter-mobile text-13 font-bold uppercase border-2 border-solid border-regal-black rounded-none outline-0 mb-30 relative w-full" name="" id="">
+                            <option value="*">Everything</option>
+                            <option value=".creative">Creative</option>
+                            <option value=".art">Art</option>
+                            <option value=".design">Design</option>
+                            <option value=".branding">Branding</option>
+                        </select>
+                    </div>
+
                     <div>
                         <div class="grid grid-cols-3 gap-30">
                             <div class="">
