--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <main class="ml-300">   
         <!-- Section Home Start -->
         <section id="home" class="home h-screen min-h-screen border-t-0 p-0 page-section flex items-center">
-                <!-- <div class="w-full px-15 mx-auto"> -->
-                    <div class="max-w-540 my-0 mx-auto">       
+                <div class="w-full px-15 mx-auto">
+                    <div class="max-w-540 m-auto">       
                         <h1 class="font-Montserrat text-7xl font-black leading-57.6 mb-50 text-regal-black uppercase">Hello,</h1>
                             <p class="font-Lato text-xl leading-30 text-regal-grey-1">I am Mugi Doe, web developer from Melbourne, Australia. I have rich experience in web site design and building and customization, also I am good at wordpress.</p>
                                 <div class="mt-48">
@@ -96,13 +96,13 @@
                             </span>
                         </a>
                     </div>       
-                <!-- </div>          -->
+                </div>         
         </section>
         <!-- Section Home End -->
     
         <!-- Section Services Start -->
         <section id="services" class="page-section">
-            <div class="nda-container">
+            <div class="w-full px-15 mx-auto">
                 <div class="max-w-1080 mx-auto">
                     <h2 class="text-3xl font-black m-0 font-Montserrat uppercase mb-100">Services</h2>
     
