delete body at input.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.css" integrity="sha512-9Tu/Gu0+bXW+oGrTGJOeNz2RG4MaF52FznXCciXFrXehFTLF6phJnJFNVOU2mmj9FWIXk9ap0H1ocygu1ZTRqg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./build/css/style.css">
 </head>
-<body>
+
+<body class="bg-regal-white text-base overflow-hidden">
     
     <!-- mobile header start -->
     <header class="bg-regal-white border-1 border-solid border-regal-gr-w py-10 px-0 hidden">
