--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                     <h2 class="text-3xl font-black m-0 font-Montserrat uppercase mb-100">Prices</h2>
                     <div class="grid grid-cols-1 md:grid-cols-3">
 
-                        <div class="border-1 border-solid border-regal-gr-w py-40 px-30 lg:py-40 lg:px-70">
+                        <div class="prices-item border-1 border-solid border-regal-gr-w py-40 px-30 lg:py-40 lg:px-70">
                             <span class="text-regal-white font-Montserrat text-sm font-bold inline-block bg-regal-purple py-3 px-10">Regular</span>
                             <h3 class="text-5xl font-black font-Montserrat mt-30 mx-0 my-20"><em class="not-italic text-xl mr-10 align-super">$</em>14</h3>
                             <ul class="list-none mb-0">
@@ -435,7 +435,7 @@
                             </div>
                         </div>
     
-                        <div class="border-1 border-solid border-regal-gr-w bg-regal-purple py-40 px-30 lg:py-40 lg:px-70">
+                        <div class="prices-item border-1 border-solid border-regal-gr-w bg-regal-purple py-40 px-30 lg:py-40 lg:px-70">
                             <span class="text-regal-purple font-Montserrat text-sm font-bold inline-block bg-regal-white py-3 px-10">Premium</span>
                             <h3 class="text-5xl text-regal-white font-black font-Montserrat mt-30 mx-0 my-20"><em class="not-italic text-regal-white text-xl mr-10 align-super">$</em>29</h3>
                             <ul class="list-none mb-0">
@@ -449,7 +449,7 @@
                             </div>
                         </div>
     
-                        <div class="border-1 border-solid border-regal-gr-w py-40 px-30 lg:py-40 lg:px-70">
+                        <div class="prices-item border-1 border-solid border-regal-gr-w py-40 px-30 lg:py-40 lg:px-70">
                             <span class="text-regal-white font-Montserrat text-sm font-bold inline-block bg-regal-purple py-3 px-10">Professional</span>
                             <h3 class="text-5xl font-black font-Montserrat mt-30 mx-0 my-20"><em class="not-italic text-xl mr-10 align-super">$</em>43</h3>
                             <ul class="list-none mb-0">
