--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <main class="content main-layout ml-0 lg:ml-300">   
         <!-- Section Home Start -->
         <section id="home" class="home h-auto md:h-screen min-h-auto md:min-h-screen border-t-0 py-100 px-0 md:p-0 page-section flex items-center">
-                <div class="w-full lg:max-w-1080 pl-15 mx-auto">
+                <div class="w-full lg:max-w-1080 px-15 mx-auto">
                     <div class="max-w-540 m-auto">       
                         <h1 class="home-title font-Montserrat text-50 md:text-7xl font-black leading-57.6 mb-50 text-regal-black uppercase">Hello,</h1>
                             <p class="font-Lato text-base md:text-xl leading-24 md:leading-30 text-regal-grey-1">I am Mugi Doe, web developer from Melbourne, Australia. I have rich experience in web site design and building and customization, also I am good at wordpress.</p>
