--- a/index.html
+++ b/index.html
@@ -217,21 +217,21 @@
                                 <div class="relative">
                                     <span class="text-regal-grey-2 text-sm font-Lato">2019 - Present</span>
                                     <h4 class="text-lg font-Montserrat font-bold my-20 mx-0">Academic Degree</h4>
-                                    <p class="text-regal-grey-1 font-Lato leading-24 text-base">Lorem ipsum dolor sit amet quo ei simul congue exerci ad nec admodum perfecto.</p>
+                                    <p class="text-regal-grey-1 font-Lato leading-24 text-base md:max-w-280 lg:max-w-full">Lorem ipsum dolor sit amet quo ei simul congue exerci ad nec admodum perfecto.</p>
                                 </div>
                             </div>
                             <div class="relative pl-50 mb-100 w-full bg-inherit after:content-[''] after:absolute after:w-9 after:h-9 after:left-0 after:bg-regal-purple after:top-7 after:z-1">
                                 <div class="relative">
                                     <span class="text-regal-grey-2 text-sm font-Lato">2017 - 2013</span>
                                     <h4 class="text-lg font-Montserrat font-bold my-20 mx-0">Bachelor's Degree</h4>
-                                    <p class="text-regal-grey-1 font-Lato leading-24 text-base">Lorem ipsum dolor sit amet quo ei simul congue exerci ad nec admodum perfecto.</p>
+                                    <p class="text-regal-grey-1 font-Lato leading-24 text-base md:max-w-280 lg:max-w-full">Lorem ipsum dolor sit amet quo ei simul congue exerci ad nec admodum perfecto.</p>
                                 </div>
                             </div>
                             <div class="relative pl-50 mb-100 w-full bg-inherit after:content-[''] after:absolute after:w-9 after:h-9 after:left-0 after:bg-regal-purple after:top-7 after:z-1">
                                 <div class="relative">
                                     <span class="text-regal-grey-2 text-sm font-Lato">2013 - 2009</span>
                                     <h4 class="text-lg font-Montserrat font-bold my-20 mx-0">Honours Degree</h4>
-                                    <p class="text-regal-grey-1 font-Lato leading-24 text-base">Lorem ipsum dolor sit amet quo ei simul congue exerci ad nec admodum perfecto.</p>
+                                    <p class="text-regal-grey-1 font-Lato leading-24 text-base md:max-w-280 lg:max-w-full">Lorem ipsum dolor sit amet quo ei simul congue exerci ad nec admodum perfecto.</p>
                                 </div>
                             </div>
                             <span class="absolute w-px bg-regal-gr-w top-7 bottom-0 left-4"></span>
@@ -242,21 +242,21 @@
                                 <div class="relative">
                                     <span class="text-regal-grey-2 text-sm font-Lato">2019 - Present</span>
                                     <h4 class="text-lg font-Montserrat font-bold my-20 mx-0">Academic Degree</h4>
-                                    <p class="text-regal-grey-1 font-Lato leading-24 text-base">Lorem ipsum dolor sit amet quo ei simul congue exerci ad nec admodum perfecto.</p>
+                                    <p class="text-regal-grey-1 font-Lato leading-24 text-base md:max-w-280 lg:max-w-full">Lorem ipsum dolor sit amet quo ei simul congue exerci ad nec admodum perfecto.</p>
                                 </div>
                             </div>
                             <div class="relative pl-50 mb-100 w-full bg-inherit after:content-[''] after:absolute after:w-9 after:h-9 after:left-0 after:bg-regal-purple after:top-7 after:z-1">
                                 <div class="relative">
                                     <span class="text-regal-grey-2 text-sm font-Lato">2017 - 2013</span>
                                     <h4 class="text-lg font-Montserrat font-bold my-20 mx-0">Bachelor's Degree</h4>
-                                    <p class="text-regal-grey-1 font-Lato leading-24 text-base">Lorem ipsum dolor sit amet quo ei simul congue exerci ad nec admodum perfecto.</p>
+                                    <p class="text-regal-grey-1 font-Lato leading-24 text-base md:max-w-280 lg:max-w-full">Lorem ipsum dolor sit amet quo ei simul congue exerci ad nec admodum perfecto.</p>
                                 </div>
                             </div>
                             <div class="relative pl-50 mb-100 w-full bg-inherit after:content-[''] after:absolute after:w-9 after:h-9 after:left-0 after:bg-regal-purple after:top-7 after:z-1">
                                 <div class="relative">
                                     <span class="text-regal-grey-2 text-sm font-Lato">2013 - 2009</span>
                                     <h4 class="text-lg font-Montserrat font-bold my-20 mx-0">Honours Degree</h4>
-                                    <p class="text-regal-grey-1 font-Lato leading-24 text-base">Lorem ipsum dolor sit amet quo ei simul congue exerci ad nec admodum perfecto.</p>
+                                    <p class="text-regal-grey-1 font-Lato leading-24 text-base md:max-w-280 lg:max-w-full">Lorem ipsum dolor sit amet quo ei simul congue exerci ad nec admodum perfecto.</p>
                                 </div>
                             </div>
                             <span class="absolute w-px bg-regal-gr-w top-7 bottom-0 left-4"></span>
