fix max-width on tablet and p tag of testimonials

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header
       class="mobile-header bg-regal-white border-1 border-solid border-regal-gr-w py-10 px-0 block lg:hidden"
     >
-      <div class="w-full pl-15 pr-15 ml-auto mr-auto">
+      <div class="nda-container w-full px-15 mx-auto">
         <div class="mobile-item flex items-center">
           <div class="menu-icon inline-flex mr-25">
             <button
@@ -199,9 +199,9 @@
               </button>
             </div>
           </div>
-
+          <!-- class="scroll-down absolute bottom-40 right-70 w-full max-w-93% hidden md:block" -->
           <div
-            class="scroll-down absolute bottom-40 right-70 w-full max-w-93% hidden md:block"
+            class="scroll-down absolute bottom-40 -left-10 w-full hidden md:block"
           >
             <a class="mouse-wrapper">
               <span
@@ -219,7 +219,7 @@
 
       <!-- Section Services Start -->
       <section id="services" class="page-section">
-        <div class="w-full max-w-1080 px-15 mx-auto">
+        <div class="nda-container w-full max-w-1080 px-15 mx-auto">
           <div class="">
             <h2
               class="text-3xl font-black m-0 font-Montserrat uppercase mb-100"
@@ -307,7 +307,7 @@
 
       <!-- Section Skills Start -->
       <section id="skills">
-        <div class="w-full max-w-1080 px-15 mx-auto">
+        <div class="nda-container w-full max-w-1080 px-15 mx-auto">
           <div class="">
             <h2
               class="text-3xl font-black m-0 font-Montserrat uppercase mb-100"
@@ -403,7 +403,7 @@
 
       <!-- Section Experience Start -->
       <section id="experience" class="page-section">
-        <div class="w-full max-w-1080 px-15 mx-auto">
+        <div class="nda-container w-full max-w-1080 px-15 mx-auto">
           <div class="">
             <h2
               class="text-3xl font-black m-0 font-Montserrat uppercase mb-100"
@@ -538,7 +538,7 @@
 
       <!-- Section Works Start -->
       <section id="works" class="page-section">
-        <div class="w-full max-w-1080 px-15 mx-auto">
+        <div class="nda-container w-full max-w-1080 px-15 mx-auto">
           <div class="">
             <h2 class="text-3xl font-black m-0 font-Montserrat uppercase mb-94">
               Works
@@ -779,7 +779,7 @@
 
       <!-- Section Fun Facts Start -->
       <section id="facts">
-        <div class="w-full max-w-1080 px-15 mx-auto">
+        <div class="nda-container w-full max-w-1080 px-15 mx-auto">
           <div class="">
             <h2
               class="text-3xl font-black m-0 font-Montserrat uppercase mb-100"
@@ -797,7 +797,7 @@
                     >2400</em
                   >
                 </h3>
-                <p class="text-15 font-Lato text-regal-grey-1 leading-22.5">
+                <p class="text-14 font-Lato text-regal-grey-1 leading-22.5">
                   Projects Completed
                 </p>
               </div>
@@ -812,7 +812,7 @@
                     >1300</em
                   >
                 </h3>
-                <p class="text-15 font-Lato text-regal-grey-1 leading-22.5">
+                <p class="text-14 font-Lato text-regal-grey-1 leading-22.5">
                   Cup of coffee
                 </p>
               </div>
@@ -827,7 +827,7 @@
                     >5700</em
                   >
                 </h3>
-                <p class="text-15 font-Lato text-regal-grey-1 leading-22.5">
+                <p class="text-14 font-Lato text-regal-grey-1 leading-22.5">
                   Hours worked
                 </p>
               </div>
@@ -842,7 +842,7 @@
                     >640</em
                   >
                 </h3>
-                <p class="text-15 font-Lato text-regal-grey-1 leading-22.5">
+                <p class="text-14 font-Lato text-regal-grey-1 leading-22.5">
                   Awards won
                 </p>
               </div>
@@ -854,7 +854,7 @@
 
       <!-- Section Prices Start -->
       <section id="prices">
-        <div class="w-full max-w-1080 px-15 mx-auto">
+        <div class="nda-container w-full max-w-1080 px-15 mx-auto">
           <div class="">
             <h2
               class="text-3xl font-black m-0 font-Montserrat uppercase mb-100"
@@ -1001,7 +1001,7 @@
 
       <!-- Section Testimonials Start -->
       <section id="testimonials" class="page-section">
-        <div class="w-full max-w-1080 px-15 mx-auto">
+        <div class="nda-container w-full max-w-1080 px-15 mx-auto">
           <div class="">
             <h2
               class="text-3xl font-black m-0 font-Montserrat uppercase mb-100"
@@ -1009,7 +1009,7 @@
               Testimonials
             </h2>
             <div class="nda-test-list">
-              <div class="text-center mx-auto sm:w-700">
+              <div class="text-center mx-auto md:w-700">
                 <span
                   class="text-100 font-Montserrat text-regal-purple leading-1"
                   >“</span
@@ -1032,7 +1032,7 @@
                 </h4>
               </div>
 
-              <div class="text-center mx-auto sm:w-700">
+              <div class="text-center mx-auto md:w-700">
                 <span
                   class="text-100 font-Montserrat text-regal-purple leading-1"
                   >“</span
@@ -1062,7 +1062,7 @@
 
       <!-- Section Blogs Start-->
       <section id="blog" class="page-section">
-        <div class="w-full max-w-1080 px-15 mx-auto">
+        <div class="nda-container w-full max-w-1080 px-15 mx-auto">
           <div class="">
             <div class="blogs-info flex justify-between mb-100">
               <h2 class="text-3xl font-black m-0 font-Montserrat uppercase">
@@ -1188,7 +1188,7 @@
 
       <!-- Section Client Start -->
       <section id="clients">
-        <div class="w-full max-w-1080 px-15 mx-auto">
+        <div class="nda-container w-full max-w-1080 px-15 mx-auto">
           <div class="">
             <h2
               class="text-3xl font-black m-0 font-Montserrat uppercase mb-100"
@@ -1263,7 +1263,7 @@
 
       <!-- Section Contact Start -->
       <section id="contact" class="page-section">
-        <div class="w-full max-w-1080 px-15 mx-auto">
+        <div class="nda-container w-full max-w-1080 px-15 mx-auto">
           <div class="">
             <h2
               class="text-3xl font-black m-0 font-Montserrat uppercase mb-100"
