--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,7 @@
                 >
                   Call us
                 </h4>
-                <p class="text-regal-grey-1 font-Lato text-base mb-60">
+                <p class="text-regal-grey-1 font-Lato text-base mb-20 md:mb-60">
                   +976 9886-4334
                 </p>
               </div>
@@ -1292,7 +1292,7 @@
                 >
                   Email us
                 </h4>
-                <p class="text-regal-grey-1 font-Lato text-base mb-60">
+                <p class="text-regal-grey-1 font-Lato text-base mb-20 md:mb-60">
                   hello@domain.website
                 </p>
               </div>
@@ -1306,7 +1306,7 @@
                 >
                   Visit us
                 </h4>
-                <p class="text-regal-grey-1 font-Lato text-base mb-60">
+                <p class="text-regal-grey-1 font-Lato text-base mb-62 md:mb-60">
                   West Palm Beach, 4669 Travis Street
                 </p>
               </div>
@@ -1319,7 +1319,7 @@
               novalidate="true"
             >
               <div class="grid grid-cols-1 md:grid-cols-3 gap-30">
-                <div class="mb-30">
+                <div class="">
                   <input
                     type="text"
                     class="form-control block rounded-none w-full py-10 px-30 text-base font-light leading-1.6 text-regal-black-0 bg-none border-1 border-solid border-regal-gr-w shadow-none focus:outline-0 focus:border-regal-purple"
@@ -1331,7 +1331,7 @@
                   />
                 </div>
 
-                <div class="mb-30">
+                <div class="">
                   <input
                     type="text"
                     class="block rounded-none w-full py-10 px-30 text-base font-light leading-1.6 text-regal-black-0 bg-none border-1 border-solid border-regal-gr-w shadow-none focus:outline-0 focus:border-regal-purple"
@@ -1343,7 +1343,7 @@
                   />
                 </div>
 
-                <div class="mb-30">
+                <div class="">
                   <input
                     type="text"
                     class="block rounded-none w-full py-10 px-30 text-base font-light leading-1.6 text-regal-black-0 bg-none border-1 border-solid border-regal-gr-w shadow-none focus:outline-0 focus:border-regal-purple"
@@ -1357,8 +1357,9 @@
               </div>
 
               <div class="grid grid-cols-1">
-                <div class="mb-30">
+                <div class="mt-30 mb-30">
                   <textarea
+                    type="text"
                     name="InputMessage"
                     id="InputMessage"
                     class="form-control block rounded-none w-full py-10 px-30 text-base font-light leading-1.6 text-regal-black-0 bg-white bg-none border-1 border-solid border-regal-gr-w shadow-none focus:outline-0 focus:border-regal-purple"
