fix experience and margin left of main

--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
     <!-- desktop header end -->
 
     <!-- main layout start -->
-    <main class="content main-layout ml-0 lg:ml-300">
+    <!--  note xl:ml-300 -->
+    <main class="content main-layout ml-0 lg:ml-240">
       <!-- Section Home Start -->
       <section
         id="home"
@@ -411,7 +412,7 @@
               Experience
             </h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-x-30">
-              <div class="relative">
+              <div class="relative md:h-690 lg:h-620">
                 <div
                   class="relative pl-50 mb-100 w-full bg-inherit after:content-[''] after:absolute after:w-9 after:h-9 after:left-0 after:bg-regal-purple after:top-7 after:z-1"
                 >
@@ -471,7 +472,7 @@
                 ></span>
               </div>
 
-              <div class="relative">
+              <div class="relative md:h-690 lg:h-620">
                 <div
                   class="relative pl-50 mb-100 w-full bg-inherit after:content-[''] after:absolute after:w-9 after:h-9 after:left-0 after:bg-regal-purple after:top-7 after:z-1"
                 >
