--- a/index.html
+++ b/index.html
@@ -31,8 +31,15 @@
   <body class="bg-regal-white text-base overflow-x-hidden">
 
     <!-- preloader start -->
-    <div class="" id="preloader">
-      
+    <div class="" id="preloader" style="display: none">
+      <div class="outer">
+        <div class="mugi-folding-cube">
+          <div class="mugi-cube1 mugi-cube"></div>
+          <div class="mugi-cube2 mugi-cube"></div>
+          <div class="mugi-cube4 mugi-cube"></div>
+          <div class="mugi-cube3 mugi-cube"></div>
+        </div>
+      </div>
     </div>
     <!-- preloader end -->
 
@@ -1441,6 +1448,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.js"></script>
     <script src="./build/js/main.js"></script>
     <script src="./build/js/scroll.js"></script>
+
+    
     <!-- script end -->
   </body>
 </html>
